welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:11: error: not found: value poserBiscuit
poserBiscuit();
^